* Added second activity to AndroidManifest.xml, which is why it wasn't working before * Added a title for the second activity to strings.xml * Second activity shows the graph, which is a bit small for the screen * Added a copy of the graph to res/drawable-ldpi/ * Updated TODO

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="average_speed">Average speed: </string>
     <string name="most_popular_speed">Most popular speed: </string>
     <string name="add_new_speed">Add new speed: </string>
+    <string name="title_activity_display_graph">Data Graph</string>
 </resources>
