--- a/src/com/example/speedguntool/TODO
+++ b/src/com/example/speedguntool/TODO
@@ -1,7 +1,7 @@
 [ ]Allow data to be exported to a CSV file (<speed>, <time recorded>)
 [ ]Make text fields easier to read
 [ ]Consider adding / removing certain fields, e.g. adding "Highest speed" and "Percent speeding" or removing "Most popular speed"
-[ ]Add button to switch to displaying a graph in another Activity
+[*]Add button to switch to displaying a graph in another Activity
 [ ]Make the graph dynamically reflect the data put in
 [ ]Allow user to record (and write to the output file) the location, weather, etc.
 [ ]Add a "Vehicle Type" button?
