--- a/src/com/example/speedguntool/TODO
+++ b/src/com/example/speedguntool/TODO
@@ -4,5 +4,5 @@
 [*]Add button to switch to displaying a graph in another Activity
 [ ]Make the graph dynamically reflect the data put in
 [ ]Allow user to record (and write to the output file) the location, weather, etc.
-[ ]Add a "Vehicle Type" button?
+[ ]Add a "Vehicle Type" button? We can have three add buttons, each one for a specific vehicle. This would be instead of a seperate vehicle button.
 [ ]Use trigonometry to calculate the actual speed of oncoming traffic, based on the user's measured speed and his/her angle with respect to traffic?
