--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="most_popular_speed">Most popular speed: </string>
     <string name="add_new_speed">Add new speed: </string>
     <string name="title_activity_display_graph">Data Graph</string>
+    <string name="add_values">Add values to the chart</string>    
+        <string name="x">X</string>    
+        <string name="y">Y</string>
+        <string name="add">Add</string>
+        <string name="new_series">New series</string>
 </resources>
