--- a/src/com/example/speedguntool/TODO
+++ b/src/com/example/speedguntool/TODO
@@ -3,6 +3,7 @@
 [ ]Consider adding / removing certain fields, e.g. adding "Highest speed" and "Percent speeding" or removing "Most popular speed"
 [*]Add button to switch to displaying a graph in another Activity
 [ ]Make the graph dynamically reflect the data put in
-[ ]Allow user to record (and write to the output file) the location, weather, etc.
+[ ]Allow user to record (and write to the output file) the location, weather, etc. via an activity that appears before the data entry activity
 [ ]Add a "Vehicle Type" button? We can have three add buttons, each one for a specific vehicle. This would be instead of a seperate vehicle button.
+[ ]When an invalid speed is entered, have some toast pop up instead of a dialog box
 [ ]Use trigonometry to calculate the actual speed of oncoming traffic, based on the user's measured speed and his/her angle with respect to traffic?
