--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Speed Gun Tool</string>
-    <string name="num_cars">Number of cars: </string>
-    <string name="average_speed">Average speed: </string>
-    <string name="most_popular_speed">Most popular speed: </string>
-    <string name="add_new_speed">Add new speed: </string>
-    <string name="title_activity_display_graph">Data Graph</string>
-    <string name="add_values">Add values to the chart</string>    
-        <string name="x">X</string>    
-        <string name="y">Y</string>
-        <string name="add">Add</string>
-        <string name="new_series">New series</string>
+  <string name="app_name">Speed Gun Tool</string>
+  <string name="num_cars">Number of cars: </string>
+  <string name="average_speed">Average speed: </string>
+  <string name="percent_speeding">Percent speeding: </string>
+  <string name="highest_speed">Highest speed: </string>
+  <string name="add_new_speed">Add new speed: </string>
+  <string name="title_activity_display_graph">Data Graph</string>
+  <string name="add_values">Add values to the chart</string>    
+  <string name="x">X</string>    
+  <string name="y">Y</string>
+  <string name="add">Add</string>
+  <string name="new_series">New series</string>
 </resources>
